--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>alura flix</title>
 </head>
 <body>
-<h1> OS MELHORES FILMES DE 2025 </h1>
+<h1> OS MELHORES FILMES </h1>
 
 <p>Os melhores filmes de acordo com minha opinião<p>  
 
