--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/7WoO-luLshk?si=cyJt5qHpWiLpj7NC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 https://www.youtube.com/watch?v=sLk94T-hS78
 </body>
-</html>
-             title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-    </section>
+</html
 
 </body>
 
