--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>alura flix</title>
 </head>
 <body>
+     <section class="chamada">
+        <div class="chamada-texto">
 <h1> OS MELHORES FILMES </h1>
 
 <p>Os melhores filmes de acordo com minha opinião<p>  
@@ -15,6 +17,31 @@
 <p> não deixe de assistir </p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/7WoO-luLshk?si=cyJt5qHpWiLpj7NC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 https://www.youtube.com/watch?v=sLk94T-hS78
+
+ </div>
+    </section>
+
+ <section class="categoria">
+        <h2>Filmes e séries</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
+                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
+                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
+                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            </a>
+        </div>
+    </section>
+
 </body>
 </html
 
