--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ https://www.youtube.com/watch?v=sLk94T-hS78
                 <img src="avatar.png" />
             </a>
             <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+                <img src="" />
             </a>
             <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
                 <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
