--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://www.youtube.com/watch?v=sLk94T-hS78
             <a href="https://www.youtube.com/watch?v=x5pZI-DmtrE">
                 <img src="avatar.png" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+            <a href="https://www.youtube.com/watch?v=3t4WkiZmo-c">
                 <img src="monstros vs alienigenas.png" />
             </a>
             <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
