--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@ https://www.youtube.com/watch?v=sLk94T-hS78
             <a href="https://www.youtube.com/watch?v=3t4WkiZmo-c">
                 <img src="monstros vs alienigenas.png" />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=pIb3zixhP3A">
+                <img src="" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            <a href="">
+                <img src="" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            <a href="">
+                <img src="" />
             </a>
         </div>
     </section>
